# collision-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bors.toml  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: dbvt.rs  polyhedron.rs
src/: aabb.rs  bound.rs  contact.rs  cylinder.rs  frustum.rs  geometry.rs  intersect.rs  lib.rs  line.rs  obb.rs  ops.rs  plane.rs  prelude.rs  ray.rs  sphere.rs  traits.rs
src/aabb/: aabb2.rs  aabb3.rs  mod.rs
src/algorithm/: mod.rs
src/algorithm/broad_phase/: brute_force.rs  dbvt.rs  mod.rs  sweep_prune.rs
src/algorithm/minkowski/: mod.rs
src/algorithm/minkowski/epa/: epa2d.rs  epa3d.rs  mod.rs
src/algorithm/minkowski/gjk/: mod.rs
src/algorithm/minkowski/gjk/simplex/: mod.rs  simplex2d.rs  simplex3d.rs
src/dbvt/: mod.rs  util.rs  visitor.rs  wrapped.rs
src/primitive/: capsule.rs  circle.rs  cuboid.rs  cylinder.rs  line.rs  mod.rs  particle.rs  polygon.rs  polyhedron.rs  primitive2.rs  primitive3.rs  quad.rs  rectangle.rs  rectangular_plane.rs  sphere.rs  util.rs
src/volume/: cylinder.rs  mod.rs  obb.rs  sphere.rs
src/volume/aabb/: aabb2.rs  aabb3.rs  mod.rs
tests/: aabb.rs  bound.rs  dbvt.rs  frustum.rs  plane.rs  point.rs  ray.rs  serde.rs  sphere.rs
