[package]

name = "collision"
version = "0.14.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>",
        "Brian Heylin",
        "Colin Sherratt",
        "Dzmitry Malyshau",
        "Erick Tryzelaar",
        "Ilya Bogdanov",
        "Luqman Aden",
        "Maik Klein",
        "Mikko Perttunen",
        "Simon Rönnberg",
        "Pierre Krieger",
        "Tomasz Stachowiak",
        "Zeke Foppa"
]
license = "Apache-2.0"
description = "A collision extension to cgmath"

documentation = "https://docs.rs/collision"
homepage = "https://github.com/rustgd/collision-rs"
repository = "https://github.com/rustgd/collision-rs"
readme = "README.md"

keywords = ["gamedev", "cgmath", "collision"]

[lib]
name = "collision"

[features]
eders = [ "serde", "cgmath/serde" ]

[dependencies]
num = "0.1"
rand = "0.3"
approx = "0.1"
cgmath = { version = "0.16" }
serde = { version = "1.0", optional = true, features = ["derive"] }
bit-set = "0.4"

[dev-dependencies]
genmesh = "0.5"

