[package]

name = "collision"
version = "0.20.1"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>",
        "Brian Heylin",
        "Colin Sherratt",
        "Dzmitry Malyshau",
        "Erick Tryzelaar",
        "Ilya Bogdanov",
        "Luqman Aden",
        "Maik Klein",
        "Mikko Perttunen",
        "Simon Rönnberg",
        "Pierre Krieger",
        "Tomasz Stachowiak",
        "Zeke Foppa",
        "Thomas O'Dell"
]
license = "Apache-2.0"
description = "A collision extension to cgmath"
edition = "2018"

documentation = "https://docs.rs/collision"
homepage = "https://github.com/rustgd/collision-rs"
repository = "https://github.com/rustgd/collision-rs"
readme = "README.md"

keywords = ["gamedev", "cgmath", "collision"]

[lib]
name = "collision"

[dependencies]
rand = "0.6"
approx = "0.3" # Only for the macros; for all other instances use the re-exported cgmath ones.
cgmath = "0.17"
serde = { version = "1.0", optional = true, features = ["derive"] }
bit-set = "0.5"
smallvec = "0.6.1"

[target.'cfg(feature="serde")'.dependencies]
cgmath = { version = "0.17", features = ["serde"] }
num = { version = "0.2", features = ["serde"] }

[dev-dependencies]
genmesh = "0.5"

